# quiz_time

./: .env  .env.example  .gitignore  Docker-compose.yml  db.sqlite3  index.html  manage.py  pyproject.toml  requirements.txt
backend/: Dockerfile  entrypoint.sh  requirements.txt
backend/config/: settings.py
quiz_time/: asgi.py  settings.py  urls.py  wsgi.py
quizzes/: models.py  urls.py  views.py
quizzes/migrations/: 0001_initial.py
