[project]
name = "quiz-time"
version = "0.1.0"
description = ""
authors = [
    {name = "Frank",email = "this.comp2025@gmail.com"}
]
requires-python = ">=3.13,<4.0"
dependencies = [
    "django (>=6.0.2,<7.0.0)",
    "redis (>=7.4.0,<8.0.0)",
    "celery (>=5.6.2,<6.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "environ (>=1.0,<2.0)",
    "ratelimit (>=2.2.1,<3.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "result (>=0.17.0,<0.18.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "django-redis (>=6.0.0,<7.0.0)",
    "django-celery-beat (>=2.9.0,<3.0.0)",
    "gunicorn (>=25.2.0,<26.0.0)",
    "whitenoise (>=6.12.0,<7.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "reportlab (>=4.4.10,<5.0.0)",
    "weasyprint (>=68.1,<69.0)",
    "boto3 (>=1.42.76,<2.0.0)",
    "django-storages (>=1.14.6,<2.0.0)",
    "sentry-sdk (>=2.56.0,<3.0.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "app (>=0.0.1,<0.0.2)",
    "django-bootstrap5 (>=26.2,<27.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
